# cutils

./: CMakeLists.txt
include/: includes.h  io_utils.h  managed_array.h  managed_string.h  math_utils.h
lib/linux/: cutils_tests
lib/win/Debug/: cutils.ilk  cutils.lib  cutils_tests.ilk
src/: io_utils.c  managed_array.c  managed_string.c  math_utils.c
tests/: main.c
